# gittui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  branch_manager.rs  colors.rs  helpers.rs  main.rs
src/app/: app.rs  app_default.rs  app_draw.rs  app_draw_branches.rs  app_draw_editor.rs  app_draw_files.rs  app_draw_graph.rs  app_draw_inspector.rs  app_draw_modal.rs  app_draw_modal_actions.rs  app_draw_modal_checkout.rs  app_draw_modal_commit.rs  app_draw_modal_create_branch.rs  app_draw_modal_delete_branch.rs  app_draw_modal_solo.rs  app_draw_settings.rs  app_draw_splash.rs  app_draw_status.rs  app_draw_statusbar.rs  app_draw_title.rs  app_draw_viewer.rs  app_input.rs  app_layout.rs
src/app/layout/: layout.rs  status.rs  title.rs
src/core/: batcher.rs  branches.rs  buffer.rs  chunk.rs  layers.rs  oids.rs  renderers.rs  tags.rs  walker.rs
src/git/: actions.rs  queries.rs
src/git/actions/: commits.rs
src/git/queries/: commits.rs  diffs.rs  helpers.rs
src/graph/: chunk.rs  layers.rs
src/helpers/: colors.rs  palette.rs  spinner.rs  symbols.rs  text.rs
src/utils/: colors.rs  symbols.rs  time.rs
